--- a/Resources/Base.lproj/MainMenu.xib
+++ b/Resources/Base.lproj/MainMenu.xib
@@ -63,6 +63,16 @@
                         </items>
                     </menu>
                 </menuItem>
+                <menuItem title="Mavlink" id="CPa-r0-DXs" userLabel="Mavlink">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <menu key="submenu" title="Mavlink" id="U4I-1F-hMT">
+                        <items>
+                            <menuItem title="Item" id="IYw-Kd-KUE">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                            </menuItem>
+                        </items>
+                    </menu>
+                </menuItem>
                 <menuItem title="Window" id="19">
                     <menu key="submenu" title="Window" systemMenu="window" id="24">
                         <items>
@@ -112,20 +122,6 @@
                 <subviews>
                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="539" customClass="PrimaryFlightDisplayView" customModule="MavlinkPrimaryFlightDisplay" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
-                        <subviews>
-                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3Nl-UB-Nfp">
-                                <rect key="frame" x="14" y="13" width="92" height="32"/>
-                                <animations/>
-                                <buttonCell key="cell" type="push" title="Connect" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="BSY-UO-HQr">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                            </button>
-                        </subviews>
-                        <constraints>
-                            <constraint firstAttribute="bottom" secondItem="3Nl-UB-Nfp" secondAttribute="bottom" constant="20" id="an8-8P-dJ8"/>
-                            <constraint firstItem="3Nl-UB-Nfp" firstAttribute="leading" secondItem="539" secondAttribute="leading" constant="20" id="kFF-Tr-PV9"/>
-                        </constraints>
                         <animations/>
                     </customView>
                 </subviews>
@@ -141,6 +137,7 @@
         <customObject id="494" customClass="AppDelegate" customModule="MavlinkPrimaryFlightDisplay" customModuleProvider="target">
             <connections>
                 <outlet property="flightView" destination="539" id="TkO-RV-dPM"/>
+                <outlet property="mavlinkMenu" destination="U4I-1F-hMT" id="mUL-JK-FSh"/>
                 <outlet property="window" destination="371" id="532"/>
             </connections>
         </customObject>
