Add scan button and peripheral list

--- a/Sources/iOS/Base.lproj/Main.storyboard
+++ b/Sources/iOS/Base.lproj/Main.storyboard
@@ -28,6 +28,9 @@
                                 <state key="normal" title="Scan">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="scanButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TPc-vz-iyI"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
